--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebglTest.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebglTest.data.gz",
-        frameworkUrl: buildUrl + "/WebglTest.framework.js.gz",
-        codeUrl: buildUrl + "/WebglTest.wasm.gz",
+        dataUrl: buildUrl + "/WebglTest.data",
+        frameworkUrl: buildUrl + "/WebglTest.framework.js",
+        codeUrl: buildUrl + "/WebglTest.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Webgl_ModelingTest",
