--- a/index.html
+++ b/index.html
@@ -3,27 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | WEBGL_BetterUI</title>
+    <title>Unity WebGL Player | Closet</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-   <style>
-  body, html {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  #unity-container {
-    width: 100%;
-    height: 100%;
-  }
-  canvas {
-    width: 100% !important;
-    height: 100% !important;
-  }
-</style>
-
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
@@ -38,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">WEBGL_BetterUI</div>
+        <div id="unity-build-title">Closet</div>
       </div>
     </div>
     <script>
@@ -75,14 +57,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build.loader.js";
+      var loaderUrl = buildUrl + "/Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build.data",
-        frameworkUrl: buildUrl + "/build.framework.js",
-        codeUrl: buildUrl + "/build.wasm",
+        dataUrl: buildUrl + "/299ea908a9744bd03edc032173d67856.data",
+        frameworkUrl: buildUrl + "/d36e3683504165dc3fb2e460d98487f6.js",
+        codeUrl: buildUrl + "/86e38912ac272c56e97cc85ffd9eb427.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "WEBGL_BetterUI",
+        companyName: "Anice",
+        productName: "Closet",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
